Fixed bug that caused the copied element to hide behind the page element; Closes #764

--- a/modules/cmsadmin/resources/scss/components/_blockholder.scss
+++ b/modules/cmsadmin/resources/scss/components/_blockholder.scss
@@ -99,7 +99,7 @@
 	width: 100%;
 	text-align: left;
 	margin-bottom: 5px;
-	z-index: 10 !important;
+	z-index: 100 !important;
 
 	i {
 		margin: 0 !important;
